Missing only the placeholder credits

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
         <section id="prefacePt1">
             <div class="text-wrapper">
                 <h1>There's infatuation, there's attraction, there's love...</h1>
-                <h2>...and then, there's limerence.</h2>
+                <h2>...and then, there's <span class="accent-light-bold">limerence.</span></h2>
                 <p class="down-symbols"><span class="symbol">&#x2193;</span> <span class="symbol">&#x2193;</span> <span
                         class="symbol">&#x2193;</span></p>
             </div>
@@ -33,9 +33,8 @@
                 <p>Limerence is an intense, involuntary state of romantic infatuation marked by obsessive
                     longing for another person and a powerful need for reciprocity. This desire appears uninvited; it
                     feels unintentional, as if someone bewitched you. Think of puppy love that lingers and gets out of
-                    control. Billie Holiday's song <i>You Go To My Head</i> is that feeling in pure form; her
-                    description is
-                    textbook limerence:</p>
+                    control. <span class="accent-light-bold">Billie Holiday's song <i>You Go To My Head</i></span> is that feeling in pure form; her
+                    description is textbook limerence:</p>
                 <p class="down-symbols"><span class="symbol">&#x2193;</span> <span class="symbol">&#x2193;</span> <span
                         class="symbol">&#x2193;</span></p>
             </div>
@@ -56,10 +55,7 @@
             <div class="text-wrapper">
                 <h1>What it feels like</h1>
                 <p>If you recognize this feeling, know that those deep and intense desires are fundamental to our
-                    nature. It was
-                    true for Billie Holiday in the 30s, it is true for you, and it is true for Bad Bunny today. Just
-                    look at
-                    the lyrics of <i>Un Coco</i>:</p>
+                    nature. This phenomenon happens in three phases: <span class="accent-light-bold">Infatuation, Crystallisation, and Deterioration.</span><br><br> In the 1930's Billie Holiday was probably going through the Infatuation and Crystallisation stages, while in 2022 Bad Bunny might have been transitioning from Crystallisation to Deterioration  when he wrote<span class="accent-light-bold"> <i>Un Coco</i></span>:</p> 
                 <p class="down-symbols"><span class="symbol">&#x2193;</span> <span class="symbol">&#x2193;</span> <span
                         class="symbol">&#x2193;</span></p>
             </div>
@@ -67,43 +63,24 @@
 
         <section id="uncoco-quote">
             <blockquote>
-                <p class="lyrics-line">
-                    <span class="spanish">Me paso fumando bajo las palmera'</span><br>
-                    <span class="english">(I spend my time smoking under the palm trees)</span>
-                </p>
-                <p class="lyrics-line">
-                    <span class="spanish">A ver si me cae un coco en la cabeza y me borra mi vida entera</span><br>
-                    <span class="english">(To see if a coconut falls on my head and erases my whole life)</span>
-                </p>
-                <p class="lyrics-line">
-                    <span class="spanish">Veo parejitas dándose beso' y me da dentera</span><br>
-                    <span class="english">(I see couples kissing and it gives me the creeps)</span>
-                </p>
-                <p class="lyrics-line">
-                    <span class="spanish">Voy a tirarle el radio por mar si sale Sin Bandera porque</span><br>
-                    <span class="english">(I'm going to throw the radio into the sea if Sin Bandera comes on
-                        because)</span>
-                </p>
-                <p class="lyrics-line">
-                    <span class="spanish">No puedo escuchar cancione' de romance</span><br>
-                    <span class="english">(I can't listen to romantic songs)</span>
-                </p>
-                <p class="lyrics-line">
-                    <span class="spanish">Me cansé que de pensar en ti no me canse</span><br>
-                    <span class="english">(I'm tired of not getting tired of thinking about you)</span>
-                </p>
-                <p class="lyrics-line">
-                    <span class="spanish">El último pétalo me dijo que aún hay chance</span><br>
-                    <span class="english">(The last petal told me there's still a chance)</span>
-                </p>
-                <p class="lyrics-line">
-                    <span class="spanish">No sé si es verdad, pero si va' a volver, avanza</span><br>
-                    <span class="english">(I don't know if it's true, but if you're going to come back, go ahead)</span>
-                </p>
-                <p class="lyrics-line">
-                    <span class="spanish">Por favor</span><br>
-                    <span class="english">(Please)</span>
-                </p>
+                <p class="lyrics-line"><span class="spanish">Me paso fumando bajo las palmera'</span></p>
+                <p class="lyrics-line"><span class="english">(I spend my time smoking under the palm trees)</span></p>
+                <p class="lyrics-line"><span class="spanish">A ver si me cae un coco en la cabeza y me borra mi vida entera</span></p>
+                <p class="lyrics-line"><span class="english">(To see if a coconut falls on my head and erases my whole life)</span></p>
+                <p class="lyrics-line"><span class="spanish">Veo parejitas dándose beso' y me da dentera</span></p>
+                <p class="lyrics-line"><span class="english">(I see couples kissing and it gives me the creeps)</span></p>
+                <p class="lyrics-line"><span class="spanish">Voy a tirarle el radio por mar si sale Sin Bandera porque</span></p>
+                <p class="lyrics-line"><span class="english">(I'm going to throw the radio into the sea if Sin Bandera comes on                        because)</span></p>
+                <p class="lyrics-line"><span class="spanish">No puedo escuchar cancione' de romance</span></p>
+                <p class="lyrics-line"><span class="english">(I can't listen to romantic songs)</span></p>
+                <p class="lyrics-line"><span class="spanish">Me cansé que de pensar en ti no me canse</span></p>
+                <p class="lyrics-line"><span class="english">(I'm tired of not getting tired of thinking about you)</span></p>
+                <p class="lyrics-line"><span class="spanish">El último pétalo me dijo que aún hay chance</span></p>
+                <p class="lyrics-line"><span class="english">(The last petal told me there's still a chance)</span></p>
+                <p class="lyrics-line"><span class="spanish">No sé si es verdad, pero si va' a volver, avanza</span></p>
+                <p class="lyrics-line"><span class="english">(I don't know if it's true, but if you're going to come back, go ahead)</span></p>
+                <p class="lyrics-line"><span class="spanish">Por favor</span></p>
+                <p class="lyrics-line"><span class="english">(Please)</span></p>
                 <p class="down-symbols"><span class="symbol">&#x2193;</span> <span class="symbol">&#x2193;</span> <span
                         class="symbol">&#x2193;</span></p>
             </blockquote>
@@ -111,9 +88,9 @@
 
         <section id="intro">
             <div class="text-wrapper">
-                <h1>The Spell</h1>
-                <p>As you can see, sometimes attraction feels like Cupid's arrow or a love spell:
-                    sudden, unintended, and <b>impossible to reason with</b>. Limerence, as the intense longing for
+                <h1>The Spell: Infatuation</h1>
+                <p>As you can see, sometimes attraction <span class="accent-light-bold">feels like Cupid's arrow or a love spell:
+                    sudden, unintended, and impossible to reason with</span>.<br><br>Limerence, as the intense longing for
                     someone whose feelings
                     we cannot fully know, takes over our thoughts as if they hold a secret we urgently need.</p>
                 <p class="down-symbols"><span class="symbol">&#x2193;</span> <span class="symbol">&#x2193;</span> <span
@@ -123,9 +100,9 @@
 
         <section id="analysis-intro">
             <div class="text-wrapper">
-                <h1>The Reality</h1>
+                <h1>The Movie inside your Head: Crystallisation</h1>
                 <p>But look closely. That turmoil is happening inside Billie's mind, Bad Bunny's mind, and yours. In
-                    reality, it is <b>your thoughts and energy</b> creating the emotional momentum, rarely the person
+                    reality, it is <span class="accent-light-bold">your thoughts and energy creating the emotional momentum</span>, rarely the person
                     themselves.<br><br>
                     As Dorothy Tennov, the psychologist who coined the term, explains, this experience is a production
                     staged entirely in your head:</p>
@@ -134,7 +111,7 @@
             </div>
         </section>
 
-        <section id="tennov-quote">
+        <section id="tennov-quote"> 
             <blockquote>
                 <p>Limerence is, above all else, <b>mental activity.</b> It is an interpretation of events, rather than
                     the
@@ -150,12 +127,12 @@
 
         <section id="conclusion">
             <div class="text-wrapper">
-                <h1>The Projection</h1>
+                <h1>The Realization: Deterioration</h1>
                 <p>But what if the “beloved” is not the main character, but a supporting role we created to look back at
                     ourselves?<br><br>
-                    Some sychologists describe limerence as a <b>projection</b> of our unacknowledged qualities, unmet
+                    Some psychologists describe limerence as a <span class="accent-light-bold">projection of our unacknowledged qualities, unmet
                     needs, and
-                    internal stories. We don't really see <i>them</i>, but a symbol: an image shaped by unconscious
+                    internal stories</span>. We don't really see <i>them</i>, but a symbol: an image shaped by unconscious
                     desires,
                     attachment patterns, and the idealized narratives we carry. We fall in love with the “missing half”
                     of
@@ -170,11 +147,11 @@
 
         <section id="invitation">
             <div class="text-wrapper">
-                <h1>The Invitation</h1>
+                <h1>An Invitation</h1>
                 <p>Instead of trying to possess the person who awakens this feeling, we can turn the attraction inward
                     and treat it as a message from the parts of us that seek expression.<br><br>
                     Acknowledging that the hidden aspects of yourself are projecting themselves onto others can serve as
-                    a form of self-discovery, creating a space where desire can return to its source: <b>yourself</b>
+                    a form of self-discovery, creating a space where desire can return to its source: <span class="accent-light-bold">yourself</span>
                 </p>
                 <p class="down-symbols"><span class="symbol">&#x2193;</span> <span class="symbol">&#x2193;</span> <span
                         class="symbol">&#x2193;</span></p>
@@ -190,24 +167,24 @@
     <!-- ----------------------------------------------------------------------- -->
     <!--                              INTERMISSION                               -->
     <!-- ----------------------------------------------------------------------- -->
-     
+
     <section id="final-prompt">
         <div class="intermission-content">
             <br>
             <h1><b>Put it to rest</b></h1>
             <br>
-            <p>Think of someone who has stirred longing, admiration, or limerent desire in you. Not necessarily a
-                lover, it could be a friend, a fleeting crush, or a stranger who shifted something in you.<br><br>
-                You will credit them as if they were part of the <b>film of that chapter of your life</b>. We need:</p>
+            <p>Think of someone who has stirred longing, yearning, or limerent desire in you. Not necessarily a
+                lover, it could be a friend, a crush, or a stranger who shifted something in you.<br><br>
+                <span class="accent-glow">You will credit them as if they were part of the film of that chapter of your life</span>. We need:</p>
             <br>
             <ul>
-                <li>Their Name</li>
-                <li>Their "Role" in your story</li>
-                <li>A Soundtrack Song (optional)</li>
-                <li>A closing Note (optional)</li>
+                <li>Their <span class="accent-glow">Name</span></li>
+                <li>Their <span class="accent-glow">Role</span> in your story</li>
+                <li>A Soundtrack<span class="accent-glow"> Song</span> (optional)</li>
+                <li>A closing <span class="accent-glow">Note</span> (optional)</li>
             </ul>
             <br>
-            <p class="small">* To keep this private, <b>you can use the 'hide' checkbox</b></p>
+            <p class="small"><span class="accent-bold">* To keep your submission private, you can use the 'hide' checkbox</span></p>
 
             <section id="button">
                 <a class="button" href="#" id="goButton"><span class="symbol">&#x2192;</span> I'm ready <span
