--- a/public/models.html
+++ b/public/models.html
@@ -18,6 +18,12 @@
 
 <body>
         <section id="windowsScene">
+            <h1 id="final-message">Remember the three stages of limerence?</h1>
+            <h2 id="final-submessage">Infatuation: the attachment/spark<br>Crystallisation: the fixation/fantasy<br>Deterioriation: the disillusionment/recovery</h2>
+            <h3 id="final-final-message">Each of them is an opportunity to look deeper into yourself and reality.</h3>
+            <footer id="footer-final">
+                <p class="accent-light-bold" id="footer-instructions"><u>You can move around with the mouse: left click to rotate, middle click to zoom, right click to pan.</u></p>
+                </footer>
             <canvas id="three-windows"></canvas>
         </section>
         <script type="module" src="/js/three-windows.js"></script>
