Final version for now

--- a/public/index.html
+++ b/public/index.html
@@ -159,7 +159,7 @@
         </section>
 
         <section id="intermission-button">
-            <a class="button" href="#" id="intButton"><span class="symbol">&#x2192;</span> Let's begin <span
+            <a class="button" href="#" id="intButton"><span class="symbol">&#x2192;</span> I'm Ready <span
                     class="symbol">&#x2192;</span></a>
         </section>
     </section>
@@ -187,7 +187,7 @@
             <p class="small"><span class="accent-bold">* To keep your submission private, you can use the 'hide' checkbox</span></p>
 
             <section id="button">
-                <a class="button" href="#" id="goButton"><span class="symbol">&#x2192;</span> I'm ready <span
+                <a class="button" href="#" id="goButton"><span class="symbol">&#x2192;</span> OK I'll do it <span
                         class="symbol">&#x2192;</span></a>
             </section>
         </div>
