Clean up and structure polish

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,10 @@
     }
 </script>
 </head>
-
 <body>
+    <!-- ----------------------------------------------------------------------- -->
+    <!--                              INTRODUCTION                               -->
+    <!-- ----------------------------------------------------------------------- -->
     <section id="welcome-page">
         <section id="prefacePt1">
             <div class="text-wrapper">
