--- a/public/models.html
+++ b/public/models.html
@@ -15,8 +15,10 @@
     }
 </script>
 </head>
-
 <body>
+    <!-- ----------------------------------------------------------------------- -->
+    <!--                            HEADINGS AND TEXT                            -->
+    <!-- ----------------------------------------------------------------------- -->
         <section id="windowsScene">
             <h1 id="final-message">Remember the three stages of limerence?</h1>
             <h2 id="final-submessage">Infatuation: the attachment/spark<br>Crystallisation: the fixation/fantasy<br>Deterioriation: the disillusionment/recovery</h2>
